@startuml database-schema
!theme plain
hide circle
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 60
skinparam padding 10
skinparam entityBackgroundColor #FAFAFA
skinparam entityBorderColor #AAAAAA

together {
  entity "users" {
    * id : UUID <<PK>>
    --
    * email : VARCHAR(128) <<UNIQUE>>
    * external_id : VARCHAR(256) <<UNIQUE>>
  }

  entity "accounts" {
    * id : UUID <<PK>>
    --
    * user_id : UUID <<FK>>
    * name : VARCHAR(128)
    * institution : VARCHAR(128)
    * type : VARCHAR(32)
    * currency : VARCHAR(8) <<immutable>>
    * balance : NUMERIC(19,4)
    number : VARCHAR(64)
  }

  entity "categories" {
    * id : UUID <<PK>>
    --
    * user_id : UUID <<FK>>
    * name : VARCHAR(64)
    * color : VARCHAR(16)
    * type : VARCHAR(16)
  }
}

entity "transactions" {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  * account_id : UUID <<FK>>
  * category_id : UUID <<FK>>
  * title : VARCHAR(256)
  * amount : NUMERIC(19,4)
  * type : VARCHAR(16)
  * currency : VARCHAR(8)
  * date : TIMESTAMP
  note : VARCHAR(512)
}

users      ||--o{ accounts     : "CASCADE"
users      ||--o{ categories   : "CASCADE"
users      ||--o{ transactions : "CASCADE"
accounts   ||--o{ transactions : "CASCADE"
categories ||--o{ transactions : "RESTRICT"

note right of accounts
  balance updated server-side only.
  currency immutable after creation
  (DB trigger + JPA updatable=false).
end note

note right of transactions
  currency denormalized from account at write time.
  amount: negative = expense, positive = income.
end note

@enduml
